Uzupełniłem swój akapit w sprawozdaniu

--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -39,7 +39,7 @@
 [ ... ]
 
 \section{Karol Bednarek}
-[ ... ]
+W ramach projektu byłem odpowiedzialny za funkcjonalność i wyświetlenie planszy oraz pomagałem przy tworzeniu menu, w tym głównie przy wybieraniu poziomów trudności gry. Zajmowałem się wizualnym wyświetleniem planszy, wszystkich symboli, instrukcji oraz zegara. Zintegrowałem funkcje generowania planszy i sterowania z interfejsem, uzyskując płynną rozgrywkę.
 
 \section{Kinga Błaszkiewicz}
 [ ... ]
