--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -39,7 +39,7 @@
 Projekt został zrealizowany w ramach przedmiotu \textit{Podstawowy Warsztat Informatyka} na Uniwersytecie Wrocławskim. Plik podsumowanie.tex został przygotowany w celu umożliwienia każdemu członkowi zespołu szczegółowego przedstawienia swojego wkładu w realizację zadania oraz opisania wykonanych prac.
 
 \section{Karol Bednarek}
-W ramach projektu byłem odpowiedzialny za funkcjonalność i wyświetlenie planszy oraz pomagałem przy tworzeniu menu, w tym głównie przy wybieraniu poziomów trudności gry. Zajmowałem się wizualnym wyświetleniem planszy, wszystkich symboli, instrukcji oraz zegara. Zintegrowałem funkcje generowania planszy i sterowania z interfejsem, uzyskując płynną rozgrywkę.
+W ramach projektu byłem odpowiedzialny za funkcjonalność i wyświetlenie planszy oraz pomagałem przy tworzeniu menu, w tym głównie przy wybieraniu poziomów trudności gry. Zajmowałem się wizualnym wyświetleniem planszy, wszystkich symboli, instrukcji oraz zegara. Zintegrowałem funkcje generowania planszy i sterowania z interfejsem, uzyskując płynną rozgrywkę. Do tego napisałem fragment kodu, który zakończa grę wygraną lub przegraną i wyświetla komunikat.
 
 \section{Kinga Błaszkiewicz}
 [ ... ]
