dodałam moją część do tex

--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -54,6 +54,6 @@
 [ ... ]
 
 \section{Zuzanna Żol}
-[ ... ]
+[ Byłam odpowiedzialna za funkcjonalność kont użytkownika, systemu zapisu i wczytywania oraz tablicy wyników. Samodzielnie napisałam system tworzenia kont, logowania, zapisywania oraz wczytywania danych, za pomocą plików JSON. ]
 
 \end{document}
