--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -45,7 +45,7 @@ W ramach projektu byłem odpowiedzialny za funkcjonalność i wyświetlenie plan
 [ ... ]
 
 \section{Jakub Chytroń}
-[ ... ]
+Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowałem oraz zaimplementowałem klasę plansza i metody obsługujące ruchy gracza, generowanie planszy oraz rozpoczęcie/zakończenie rozgrywki.
 
 \section{Jerzy Panenka}
 [ ... ]
