uzupełniłam opis mojego wkładu

--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -42,7 +42,12 @@ Projekt został zrealizowany w ramach przedmiotu \textit{Podstawowy Warsztat Inf
 W ramach projektu byłem odpowiedzialny za funkcjonalność i wyświetlenie planszy oraz pomagałem przy tworzeniu menu, w tym głównie przy wybieraniu poziomów trudności gry. Zajmowałem się wizualnym wyświetleniem planszy, wszystkich symboli, instrukcji oraz zegara. Zintegrowałem funkcje generowania planszy i sterowania z interfejsem, uzyskując płynną rozgrywkę. Do tego napisałem fragment kodu, który zakończa grę wygraną lub przegraną i wyświetla komunikat.
 
 \section{Kinga Błaszkiewicz}
-[ ... ]
+Mój wkład w projekt:
+\begin{itemize}
+    \item \textbf{Projekt i implementacja architektury:} Zaprojektowałam oraz zaprogramowałam klasę planszy.
+    \item \textbf{Mechanika rozgrywki:} Zaimplementowałam moduł sterowania po planszy, funkcję zarządzania flagami (dodawanie/usuwanie) oraz sprawdzanie warunków zwycięstwa .
+    \item \textbf{Zarządzanie danymi:} Odpowiadałam za inicjalizację obiektu planszy oraz integrację funkcji zapisu i wczytywania stanu gry.
+\end{itemize}
 
 \section{Jakub Chytroń}
 Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowałem oraz zaimplementowałem klasę plansza i metody obsługujące ruchy gracza, generowanie planszy oraz rozpoczęcie/zakończenie rozgrywki.
