dodałam moją część do tex

--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -96,7 +96,12 @@ Moimi głównymi zadaniami w projekcie była praca nad warstwą prezentacji prog
 \end{itemize}
 
 \section{Zuzanna Żol}
-[ ... ]
+\begin{itemize}
+    \item Samodzielnie zaprojektowałam i zaimplementowałam system obsługujący konta użytkowników, zapis oraz wczytywanie rozgrywki a także ranking wyników {działający za pomocą plików .json)
+    \item Pomagałam również przy łączeniu back-endu dotyczącego systemu kont z front-endem
+\end{itemize}
+
+Do pracy używałam informacji ze strony \url{https://www.geeksforgeeks.org/python/python-json/} oraz ChatGPT (odpowiednie fragmenty są oznaczone w kodzie)
 
 \section*{Czego nie udało się wykonać}
 Oby ten paragraf pozostał pusty ...
