--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -46,7 +46,7 @@ Jako źródła pomocnicze w pisaniu kodu używałem kursu internetowego o biblio
 \section{Kinga Błaszkiewicz}
 Mój wkład w projekt:
 \begin{itemize}
-    \item \textbf{Projekt i implementacja architektury:} Zaprojektowałam oraz zaprogramowałam klasę planszy.
+    \item \textbf{Projekt i implementacja architektury:} Projektowałam oraz napisałam klasę planszy. Proponowałam wygląd klasy oraz funkcje, które na nią wpływają. Dbałam o spójność klasy i jej funkcji z resztą kodu.
     \item \textbf{Mechanika rozgrywki:} Zaimplementowałam moduł sterowania po planszy, funkcję zarządzania flagami (dodawanie/usuwanie) oraz sprawdzanie warunków zwycięstwa .
     \item \textbf{Zarządzanie danymi:} Odpowiadałam za inicjalizację obiektu planszy oraz integrację funkcji zapisu i wczytywania stanu gry.
 \end{itemize}
