--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -99,7 +99,7 @@ Moimi głównymi zadaniami w projekcie była praca nad warstwą prezentacji prog
 
 \section{Zuzanna Żol}
 \begin{itemize}
-    \item Samodzielnie zaprojektowałam i zaimplementowałam system obsługujący konta użytkowników, zapis oraz wczytywanie rozgrywki a także ranking wyników {działający za pomocą plików .json)
+    \item Samodzielnie zaprojektowałam i zaimplementowałam system obsługujący konta użytkowników, zapis oraz wczytywanie rozgrywki a także ranking wyników (działający za pomocą plików .json)
     \item Pomagałam również przy łączeniu back-endu dotyczącego systemu kont z front-endem
 \end{itemize}
 
