--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -52,7 +52,7 @@ Mój wkład w projekt:
 \end{itemize}
 
 \section{Jakub Chytroń}
-Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowałem oraz zaimplementowałem klasę plansza i metody obsługujące ruchy gracza, generowanie planszy oraz rozpoczęcie/zakończenie rozgrywki.
+Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowałem oraz zaimplementowałem klasę plansza i metody obsługujące ruchy gracza, generowanie planszy oraz rozpoczęcie/zakończenie rozgrywki. Zaprojektowałem i zaprogramowałem rekurencyjne odsłanianie pól.
 
 \section{Jerzy Panenka}
 [ ... ]
