--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -36,24 +36,76 @@
 \thispagestyle{empty}
 
 \section*{Wprowadzenie}
-[ ... ]
+Projekt został zrealizowany w ramach przedmiotu \textit{Podstawowy Warsztat Informatyka} na Uniwersytecie Wrocławskim. Plik podsumowanie.tex został przygotowany w celu umożliwienia każdemu członkowi zespołu szczegółowego przedstawienia swojego wkładu w realizację zadania oraz opisania wykonanych prac.
 
 \section{Karol Bednarek}
-[ ... ]
+W ramach projektu byłem odpowiedzialny za funkcjonalność i wyświetlenie planszy oraz pomagałem przy tworzeniu menu, w tym głównie przy wybieraniu poziomów trudności gry. Zajmowałem się wizualnym wyświetleniem planszy, wszystkich symboli, instrukcji oraz zegara. Zintegrowałem funkcje generowania planszy i sterowania z interfejsem, uzyskując płynną rozgrywkę. Do tego napisałem fragment kodu, który zakończa grę wygraną lub przegraną i wyświetla komunikat. Napisałem również funkcję zapewniającą użytkownika, że jego pierwsze odkrycie pole będzie pustym polem. 
+
+Jako źródła pomocnicze w pisaniu kodu używałem kursu internetowego o bibliotece Curses (ten sam co Agata Raczyk) oraz LLM Gemini do weryfikacji fragmentów kodu i debuggowania.
 
 \section{Kinga Błaszkiewicz}
-[ ... ]
+Mój wkład w projekt:
+\begin{itemize}
+    \item \textbf{Projekt i implementacja architektury:} Projektowałam oraz napisałam klasę planszy. Proponowałam wygląd klasy oraz funkcje, które na nią wpływają. Dbałam o spójność klasy i jej funkcji z resztą kodu.
+    \item \textbf{Mechanika rozgrywki:} Zaimplementowałam moduł sterowania po planszy, funkcję zarządzania flagami (dodawanie/usuwanie) oraz sprawdzanie warunków zwycięstwa .
+    \item \textbf{Zarządzanie danymi:} Odpowiadałam za inicjalizację obiektu planszy oraz integrację funkcji zapisu i wczytywania stanu gry.
+\end{itemize}
 
 \section{Jakub Chytroń}
-[ ... ]
+Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowałem oraz zaimplementowałem klasę plansza i metody obsługujące ruchy gracza, generowanie planszy oraz rozpoczęcie/zakończenie rozgrywki. Zaprojektowałem i zaprogramowałem rekurencyjne odsłanianie pól.
 
 \section{Jerzy Panenka}
 [ ... ]
 
 \section{Agata Raczyk}
-[ ... ]
+
+\vspace{0.3cm}
+
+Moimi głównymi zadaniami w projekcie była praca nad warstwą prezentacji programu (plik \texttt{wyswietlanie.py}) oraz dbałość o kompletność dokumentacji.\\
+
+\textbf{Realizowane zadania programistyczne:}
+\begin{itemize}
+    \item \textbf{Menu główne:} Implementacja kompletnego systemu sterowania oraz interaktywnego menu startowego wraz z obsługą komunikatów dla użytkownika.
+    \item \textbf{Interfejs rozgrywki:} Wdrożenie licznika flag oraz sformatowanie zegara gry do postaci \texttt{00:00:00}. 
+    \\Dodanie funkcjonalności migania aktywnego pola, co ułatwia graczowi lokalizację na planszy.
+    \item Opracowanie i wyświetlenie zasad gry wewnątrz programu.
+\end{itemize}
+
+\bigskip
+
+\textbf{Zadania organizacyjne i dokumentacja:}
+\begin{itemize}
+    \item Przygotowanie środowiska pracy nad raportem (stworzenie szablonu \texttt{podsumowanie.tex}).
+    \item Opracowanie pliku \texttt{README.md} (instrukcja i opis projektu).
+    \item Pełnienie funkcji osoby kontaktowej z opiekunem projektu.
+\end{itemize}
+
+\bigskip % To robi odstęp od poprzedniego tekstu
+
+\textbf{Źródła i materiały pomocnicze:}
+\begin{itemize}
+    \item \textbf{Kurs wideo:} \textit{Python Curses Tutorial - Make GOOD Looking Terminal Apps} (kanał Tech With Tim) \\
+    \url{https://www.youtube.com/watch?v=Db4oc8qc9RU}
+    
+    \item \textbf{Strony internetowe:}
+    \begin{itemize}
+        \item \url{https://docs.python.org}
+        \item \url{https://stackoverflow.com}
+        \item \url{https://www.markdownguide.org/}
+    \end{itemize}
+    
+    \item \textbf{LLM:} Google Gemini – konsultacje w zakresie redakcji dokumentacji oraz optymalizacji fragmentów kodu.
+\end{itemize}
 
 \section{Zuzanna Żol}
-[ Byłam odpowiedzialna za funkcjonalność kont użytkownika, systemu zapisu i wczytywania oraz tablicy wyników. Samodzielnie napisałam system tworzenia kont, logowania, zapisywania oraz wczytywania danych, za pomocą plików JSON. ]
+\begin{itemize}
+    \item Samodzielnie zaprojektowałam i zaimplementowałam system obsługujący konta użytkowników, zapis oraz wczytywanie rozgrywki a także ranking wyników (działający za pomocą plików .json)
+    \item Pomagałam również przy łączeniu back-endu dotyczącego systemu kont z front-endem
+\end{itemize}
+
+Do pracy używałam informacji ze strony \url{https://www.geeksforgeeks.org/python/python-json/} oraz ChatGPT (odpowiednie fragmenty są oznaczone w kodzie)
+
+\section*{Czego nie udało się wykonać}
+Oby ten paragraf pozostał pusty ...
 
 \end{document}
