--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -55,7 +55,14 @@ Mój wkład w projekt:
 Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowałem oraz zaimplementowałem klasę plansza i metody obsługujące ruchy gracza, generowanie planszy oraz rozpoczęcie/zakończenie rozgrywki. Zaprojektowałem i zaprogramowałem rekurencyjne odsłanianie pól.
 
 \section{Jerzy Panenka}
-[ ... ]
+\textbf{Zadania za które byłem odpowiedzialny}
+\begin{itemize}
+    \item \textbf{Komunikacja z użytkownikiem:} Funkcje pobierające dane od użytkownika podczas tworzenia konta, logowania, oraz przekazujące dane do funkcji napisanych przez Zuzannę Żol.
+    \item \textbf{Ranking: wyświetlanie:} Funkcja "wyswietl_ranking()" wyświetlająca najlepsze wymiki zalogowanych użytkowników zapisane za pomocą funkcji napisanych przez Zuzannę Żol.
+    \item \textbf{Inne:} Integracja funkcji wczytywania gry, usuwania konta oraz zapisywania gry.
+\end{itemize}
+
+\textbf{Źródła:} Kurs biblioteki curses (ten sam co Karol Bednarek oraz Agata Raczyk), LLM Claude do debuggingu.
 
 \section{Agata Raczyk}
 
