--- a/podsumowanie.tex
+++ b/podsumowanie.tex
@@ -56,18 +56,16 @@ Pracowałem nad generowaniem i obsługą planszy podczas rozgrywki. Zaprojektowa
 
 \section{Jerzy Panenka}
 
-\textbf{Zadania za które byłem odpowiedzialny}
+\textbf{Zadania, za które byłem odpowiedzialny:}
 \begin{itemize}
-    \item \textbf{Komunikacja z użytkownikiem:} Funkcje pobierające dane od użytkownika podczas tworzenia konta, logowania, oraz przekazujące dane do funkcji napisanych przez Zuzannę Żol.
-    \item \textbf{Ranking: wyświetlanie:} Funkcja "wyswietl_ranking()" wyświetlająca najlepsze wymiki zalogowanych użytkowników zapisane za pomocą funkcji napisanych przez Zuzannę Żol.
-    \item \textbf{Inne:} Integracja funkcji wczytywania gry, usuwania konta oraz zapisywania gry.
+    \item \textbf{Komunikacja z użytkownikiem:} Opracowanie funkcji pobierających dane od użytkownika podczas tworzenia konta i logowania oraz przekazujących te dane do modułów napisanych przez Zuzannę Żol.
+    \item \textbf{Ranking:} Implementacja funkcji \texttt{wyswietl\_ranking()}, prezentującej najlepsze wyniki zalogowanych użytkowników (na podstawie danych zapisanych przez funkcje Zuzanny Żol).
+    \item \textbf{Pozostałe:} Integracja funkcji wczytywania gry, usuwania konta oraz zapisywania stanu gry.
 \end{itemize}
 
 \textbf{Źródła:} Kurs biblioteki curses (ten sam co Karol Bednarek oraz Agata Raczyk), LLM Claude do debuggingu.
 
 \section{Agata Raczyk}
-
-\vspace{0.3cm}
 
 Moimi głównymi zadaniami w projekcie była praca nad warstwą prezentacji programu (plik \texttt{wyswietlanie.py}) oraz dbałość o kompletność dokumentacji.\\
 
@@ -112,8 +110,5 @@ Moimi głównymi zadaniami w projekcie była praca nad warstwą prezentacji prog
 \end{itemize}
 
 Do pracy używałam informacji ze strony \url{https://www.geeksforgeeks.org/python/python-json/} oraz ChatGPT (odpowiednie fragmenty są oznaczone w kodzie)
-
-\section*{Czego nie udało się wykonać}
-Oby ten paragraf pozostał pusty ...
 
 \end{document}
